--- a/pinterest-cards/app/index.css
+++ b/pinterest-cards/app/index.css
@@ -20,6 +20,41 @@ body {
   margin: 0 auto;
 }
 
+.navigation {
+  background-color: #FFF;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+}
+
+.nav-item {
+  width: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.nav-item span {
+  display: block;
+  text-align: center;
+  color: darkgrey;
+}
+
+.nav-count {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.nav-topic {
+  font-weight: lighter;
+}
+
+.cards-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
 .card {
   max-width: 300px;
   height: 400px;
@@ -27,6 +62,7 @@ body {
   border-radius: 5px;
   box-shadow: 2px 2px grey;
   padding: 12px;
+  margin: 10px
 }
 
 .card h1 {
@@ -77,7 +113,7 @@ body {
   margin-top: 3px;
 }
 
-button {
+.button {
   width: 100%;
   height: 40px;
   border-radius: 5px;
